// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`warns if describe returns a Promise 1`] = `
  console.log
      ● Test suite failed to run
    
        Returning a Promise from "describe" is not supported. Tests must be defined synchronously.
        Returning a value from "describe" will fail the test in a future version of Jest.
    
           9 | 'use strict';
          10 | 
        > 11 | describe('Promise describe warns', () => {
             | ^
          12 |   it('t', () => {});
          13 |   return Promise.resolve();
          14 | });
    
          at Object.describe (__tests__/describeReturnPromise.test.js:11:1)


`;

exports[`warns if describe returns something 1`] = `
  console.log
      ● Test suite failed to run
    
        A "describe" callback must not return a value.
        Returning a value from "describe" will fail the test in a future version of Jest.
    
           9 | 'use strict';
          10 | 
        > 11 | describe('describe return warns', () => {
             | ^
          12 |   it('t', () => {});
          13 |   return 42;
          14 | });
    
          at Object.describe (__tests__/describeReturnSomething.test.js:11:1)


`;
